--- a/date/2025-10/page-3.htm
+++ b/date/2025-10/page-3.htm
@@ -5,18 +5,18 @@
         <link rel="canonical" href="https://topclashfree.github.io" />
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>免责申明 - 免费Top Clash 订阅中文网</title>
-        <meta name="keywords" content="免责申明 - 免费Top Clash 订阅中文网" />
-        <meta name="description" content="免责申明 - 免费Top Clash 订阅中文网" />
+    <title>2025-10归档 - 第2页 - 免费Top Clash 订阅中文网</title>
+        <meta name="keywords" content="2025-10归档免费Top Clash 订阅中文网" />
+        <meta name="description" content="2025-10归档，当前是第2页" />
         <link rel="icon" href="/assets/website/img/freenetch/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="免费Top Clash 订阅中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://topclashfree.github.io" />
     <meta property="og:site_name" content="免费Top Clash 订阅中文网" />
-    <meta property="og:title" content="免责申明 - 免费Top Clash 订阅中文网" />
+    <meta property="og:title" content="2025-10归档 - 第2页 - 免费Top Clash 订阅中文网" />
     <meta property="og:image" content="/assets/website/img/freenetch/favicon.ico" />
-        <meta property="og:description" content="免责申明 - 免费Top Clash 订阅中文网" />
+        <meta property="og:description" content="2025-10归档，当前是第2页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +27,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免责申明 - 免费Top Clash 订阅中文网">
+    <meta name="apple-mobile-web-app-title" content="2025-10归档 - 第2页 - 免费Top Clash 订阅中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -61,7 +61,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="newly_discovered_nodes">
+<body data-page="category">
         <!-- Header Section Start -->
     <div class="header-section section">
         <!-- Header Bottom Start -->
@@ -101,42 +101,66 @@
             <!-- Page Banner -->
             <div class="col-12 d-flex align-items-center justify-content-center">
                 <div class="page-banner">
-                    <h1>免责申明</h1>
+                    <h1>2025-10 归档</h1>
                     <div class="breadcrumb">
                         <ul>
                             <li><a href="/">首页</a></li>
-                            <li>免责申明</li>
+                            <li>2025-10 归档</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div><!-- Page Banner Section End -->
-    <div class="feature-section section mt-60 mb-60">
+        <div class="feature-section section mt-60 mb-60">
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们致力于为用户提供便捷、高效的网络访问体验。然而，在使用本平台服务的过程中，用户需要了解并遵守以下免责条款：</p>
-<p>一、服务内容</p>
-<p>本平台提供的所有节点订阅服务均来源于公开信息或合作伙伴，我们不对节点信息的真实性、准确性、合法性以及可用性做任何明示或暗示的保证。用户在使用节点时，请自行判断并承担相关风险。</p>
-<p>二、网络安全</p>
-<p>本平台仅提供节点订阅服务，不参与用户的网络访问行为。用户在使用节点时，应自行负责网络访问的安全性和合法性，不得利用本平台提供的服务从事任何违法、违规或侵犯他人权益的行为。</p>
-<p>三、隐私保护</p>
-<p>我们尊重并保护用户的个人隐私，但用户在使用本平台服务时，可能需要提供部分个人信息以完成相关操作。我们承诺将严格按照相关法律法规的要求，对用户提供的个人信息进行保密处理，并采取相应的安全措施防止信息泄露。但请注意，由于网络环境的复杂性和不确定性，我们无法保证用户个人信息在传输过程中绝对安全，用户应自行承担因信息泄露而可能产生的风险。</p>
-<p>四、版权及知识产权</p>
-<p>本平台上的所有内容（包括但不限于文字、图片、视频等）均受版权及知识产权法律保护。用户在使用本平台服务时，应遵守相关法律法规，不得擅自复制、传播或用于其他商业用途。对于侵犯本平台版权及知识产权的行为，我们将依法追究法律责任。</p>
-<p>五、免责条款</p>
-<ol>
-    <li>因网络故障、服务器维护等原因导致服务中断或无法正常使用时，本平台不承担任何责任。</li>
-    <li>用户在使用本平台服务时，因个人操作不当或第三方因素导致的损失，本平台不承担任何赔偿责任。</li>
-    <li>本平台提供的节点订阅服务仅供参考，用户在使用过程中应自行判断并承担相关风险。对于因使用本平台服务而产生的任何直接或间接损失，本平台不承担任何责任。</li>
-</ol>
-<p>六、其他</p>
-<ol>
-    <li>本免责声明自发布之日起生效，并可能根据法律法规的变化或本平台服务的调整而进行修改。用户在使用本平台服务时，应定期查看并了解最新的免责声明内容。</li>
-    <li>对于本免责声明中未明确的事项，将按照相关法律法规的规定进行处理。如用户在使用本平台服务过程中遇到任何问题或争议，可通过本平台提供的联系方式与我们联系，我们将尽力为用户解决问题。</li>
-</ol>
-<p>总之，本平台将竭诚为用户提供优质的节点订阅服务，但用户在使用服务时应自行承担相关风险并遵守相关法律法规。我们希望与用户共同营造一个安全、和谐、合法的网络环境。</p>
+                    <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                            <div class="col-md-3">
+                                <a href="/news/article-163358.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/a07724a54716f780859ad080d68f8d0a.webp" style="width:100%;" alt="突破边界：小米路由器2的科学上网全攻略与深度体验">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-163358.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        突破边界：小米路由器2的科学上网全攻略与深度体验                                    </h3>
+                                </a>
+                                <p>在全球化浪潮席卷的今天，互联网本应是无国界的知识海洋。然而现实中，网络监管政策却为许多用户筑起了无形的“数字高墙”。面对这一困境，越来越多的人开始寻求科学上网的解决方案。而你可能不知道，家中那台默默工</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-162979.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/a42ffa7b0d36c32c73601d4506950c06.webp" style="width:100%;" alt="免费Clash机场网址全攻略：从获取到配置的完整指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-162979.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash机场网址全攻略：从获取到配置的完整指南                                    </h3>
+                                </a>
+                                <p>在当今高度互联的世界中，顺畅访问全球互联网已成为许多人的刚需。无论是为了学术研究、商业资讯还是娱乐消遣，突破网络限制的需求与日俱增。在众多科学上网工具中，Clash以其出色的性能和稳定性脱颖而出，成为</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-02">
+                            <div class="col-md-3">
+                                <a href="/news/article-162685.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/027917d12c579a5dea9bd86d027f875f.webp" style="width:100%;" alt="穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-162685.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析                                    </h3>
+                                </a>
+                                <p>在信息流动日益受限的今天，网络访问的自由度成为数字时代的重要议题。无界v2rayng作为一款基于V2Ray核心的代理工具，正以其卓越的协议支持能力和用户友好的设计，成为众多用户突破网络限制的首选利器。</p>
+                            </div>
+                        </div>
+                        
+                        <ul class="pagination"><li><a href="/date/2025-10/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-10/">1</a></li><li><a href="/date/2025-10/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -145,16 +169,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-170197.htm" title="深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南">深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-169039.htm" title="突破网络边界：Firefox科学上网插件的深度指南与实战解析">突破网络边界：Firefox科学上网插件的深度指南与实战解析</a></li>
-                        <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-167466.htm" title="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">Windows平台vmess协议客户端全指南：安全代理的终极解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-170590.htm" title="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-164070.htm" title="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">全面掌握Shadowrocket安卓版：从零开始实现安全网络代理</a></li>
+                        <li class="py-2"><a href="/news/article-169808.htm" title="Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？">Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？</a></li>
+                        <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
                         <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
-                        <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-170590.htm" title="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案</a></li>
                         <li class="py-2"><a href="/news/article-167092.htm" title="突破网络边界：科学上网工具全解析与实用指南">突破网络边界：科学上网工具全解析与实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-167887.htm" title="突破网络壁垒：全方位解决Clash订阅配置失败难题">突破网络壁垒：全方位解决Clash订阅配置失败难题</a></li>
+                        <li class="py-2"><a href="/news/article-164070.htm" title="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">全面掌握Shadowrocket安卓版：从零开始实现安全网络代理</a></li>
+                        <li class="py-2"><a href="/news/article-166327.htm" title="科学上网协议全解析：从原理到实践的完整指南">科学上网协议全解析：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-165569.htm" title="掌握Surfboard配置艺术：从入门到精通的完全指南">掌握Surfboard配置艺术：从入门到精通的完全指南</a></li>
+                        <li class="py-2"><a href="/news/article-170197.htm" title="深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南">深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
                     </ul>
     </div>
 </div>
