--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -530,16 +530,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-168276.htm" title="古代冲突：文明碰撞与国家博弈的历史回响">古代冲突：文明碰撞与国家博弈的历史回响</a></li>
                         <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-165202.htm" title="轻松掌握：V2Ray剪切板配置导入Mac全攻略">轻松掌握：V2Ray剪切板配置导入Mac全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-169039.htm" title="突破网络边界：Firefox科学上网插件的深度指南与实战解析">突破网络边界：Firefox科学上网插件的深度指南与实战解析</a></li>
-                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
                         <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-165569.htm" title="掌握Surfboard配置艺术：从入门到精通的完全指南">掌握Surfboard配置艺术：从入门到精通的完全指南</a></li>
+                        <li class="py-2"><a href="/news/article-165946.htm" title="v2rayNG停止运行的原因及全面解决方案">v2rayNG停止运行的原因及全面解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-167466.htm" title="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">Windows平台vmess协议客户端全指南：安全代理的终极解决方案</a></li>
                         <li class="py-2"><a href="/news/article-167887.htm" title="突破网络壁垒：全方位解决Clash订阅配置失败难题">突破网络壁垒：全方位解决Clash订阅配置失败难题</a></li>
-                        <li class="py-2"><a href="/news/article-164070.htm" title="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">全面掌握Shadowrocket安卓版：从零开始实现安全网络代理</a></li>
+                        <li class="py-2"><a href="/news/article-170197.htm" title="深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南">深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-164439.htm" title="精通Clash端口设置：从入门到实战的完整指南">精通Clash端口设置：从入门到实战的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-169808.htm" title="Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？">Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？</a></li>
+                        <li class="py-2"><a href="/news/article-170977.htm" title="绿色浏览器科学上网：隐私保护与自由访问的完美结合">绿色浏览器科学上网：隐私保护与自由访问的完美结合</a></li>
                     </ul>
     </div>
 </div>
@@ -551,7 +551,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
